--- a/styles/global/globals.css
+++ b/styles/global/globals.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
@@ -11,10 +17,6 @@ a {
   color: inherit;
   text-decoration: none;
   cursor: pointer;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 footer {
